Fix aspect ratio on mobile

--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ input[type="file"] {
 
     #layers, .layer {
         width: 100vw !important;
-        height: calc(100vw * .78125) !important;
+        height: calc(100vw * .5625) !important;
     }
 }
 
@@ -315,6 +315,7 @@ input[type="number"] {
 .layer-expanded {
     width: 85vw !important;
     height: calc(85vw * .5625) !important;
+    align-self: center;
 }
 
 /* Right Bar
